# sagellm-benchmark

./: .gitignore  .pre-commit-config.yaml  AGENT_D_COMPLETION.md  CHANGELOG.md  QUICKSTART.md  README.md  WORKFLOW.md  pyproject.toml  quickstart.sh  run_benchmark.sh  sync_results_to_website.sh  test_basic.py  test_clients.sh  test_install.sh
.github/: copilot-instructions.md
.github/agents/: sagellm-benchmark-copilot-agent.md
.github/workflows/: back-sync.yml  benchmark-publish.yml  benchmark.yml  ci.yml  performance-regression.yml  sync-to-website.yml  trigger-website-sync.yml  upload-to-hf.yml
.sage/cache/mypy/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+258 more)
.sage/cache/mypy/3.10/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.sage/cache/mypy/3.10/annotated_doc/: __init__.data.json  __init__.meta.json  main.data.json  main.meta.json
.sage/cache/mypy/3.10/annotated_types/: __init__.data.json  __init__.meta.json
.sage/cache/mypy/3.10/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  lowlevel.data.json  lowlevel.meta.json  to_thread.data.json  to_thread.meta.json
.sage/cache/mypy/3.10/asyncio/: __init__.data.json  (+35 more)
benchmark_baselines/: README.md  perf_baseline_e2e.json
benchmarks/baselines/: perf_baseline_e2e.json  perf_baseline_e2e.md
docs/: ASCEND_BENCHMARK.md  BENCHMARK_DESIGN.md  CANONICAL_RESULT_SCHEMA.md  CLIENTS_GUIDE.md  CLIENTS_IMPLEMENTATION_SUMMARY.md  CLIENTS_README.md  DEPLOYMENT_ARCHITECTURE.md  IMPROVED_SYNC_DESIGN.md  INTERFACE_CONTRACT.md  OUTPUT_STRUCTURE.md  OVERWRITE_FIX_SUMMARY.md  RELATED_PAPERS_SUMMARY.md  REPO_SIZE_POLICY.md  SHAREGPT_DATASET_GUIDE.md  SYNC_TO_WEBSITE.md  TASK_A_DATASETS.md  TASK_B_RUNNER.md  TASK_C_DELIVERY.md  TASK_C_IMPLEMENTATION.md  TASK_C_METRICS_REPORT.md  USAGE.md  USER_GUIDE_NEW_WORKFLOW.md
examples/: ascend_config_example.yaml  ascend_demo.py  batch_mode_demo.py  batch_mode_standalone_demo.py  client_demo.py  compare_models.py  run_benchmark.py  sample_REPORT.md  task_c_demo.py  throughput_benchmark_example.py  use_huggingface_sharegpt.py  use_modelscope_sharegpt.py  verify_datasets.py
hf_data/: leaderboard_single.json
hooks/: post-commit  pre-commit  pre-push
outputs/: .gitignore  config.json
outputs/cpu/gpt2/m1_20260128_001/: config.json
outputs/cpu/gpt2/m1_20260130_001/: config.json  long_input_leaderboard.json  short_input_leaderboard.json  stress_test_leaderboard.json
outputs/cpu/gpt2/short_20260128_001/: config.json
outputs/cpu/gpt2/short_20260128_002/: config.json
outputs/cpu/gpt2/short_20260128_003/: config.json
outputs/cpu/gpt2/short_20260128_004/: config.json
outputs/cpu/gpt2/short_20260128_005/: config.json
outputs/cpu/gpt2/short_20260128_006/: config.json
outputs/cpu/gpt2/short_20260130_001/: config.json  short_input_leaderboard.json
outputs/exp1_gpt2_short/: config.json  short_input_leaderboard.json
outputs/exp2_gpt2_long/: config.json  long_input_leaderboard.json
outputs/exp3_distilgpt2_short/: config.json  short_input_leaderboard.json
outputs/exp4_distilgpt2_long/: config.json  long_input_leaderboard.json
outputs/single_distilgpt2_long/: config.json  long_input_leaderboard.json
outputs/single_distilgpt2_short/: config.json  short_input_leaderboard.json
outputs/single_gpt2_long/: config.json  long_input_leaderboard.json
outputs/single_gpt2_short/: config.json  short_input_leaderboard.json
scripts/: aggregate_for_hf.py  compare_openai_endpoints.sh  compare_performance_baseline.py  local_ci_fallback.sh  manual_upload.py  merge_and_upload.py  publish_pipeline.sh  run_nonstream_compare.py  run_vllm_ascend_container.sh  setup_vllm_ascend_compare_env.sh  start_vllm_cuda_docker.sh  stop_vllm_cuda_docker.sh  upload_to_hf.py
src/sagellm_benchmark/: __init__.py  _version.py  baseline.py  canonical_artifacts.py  cli.py  metrics.py  nonstream_compare.py  regression.py  runner.py  traffic.py  types.py  workloads.py
src/sagellm_benchmark/clients/: __init__.py  base.py  lmdeploy_client.py  mock.py  multi_engine.py  openai_client.py  sagellm_client.py  vllm_client.py
src/sagellm_benchmark/dashboard/: __init__.py  ranking.py
src/sagellm_benchmark/datasets/: __init__.py  base.py  random.py  sharegpt.py  year_demo.py
src/sagellm_benchmark/exporters/: leaderboard.py
src/sagellm_benchmark/metrics/: aggregator.py  contract.py
src/sagellm_benchmark/performance/: __init__.py  benchmark_utils.py  model_benchmarks.py  operator_benchmarks.py  plotting.py
src/sagellm_benchmark/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py  table_reporter.py
src/sagellm_demo/: __init__.py
tests/: conftest.py  test_baseline_regression.py  test_cli.py  test_clients.py  test_core_telemetry.py  test_dashboard.py  test_datasets.py  test_html_reporter.py  test_imports.py  test_leaderboard_exporter.py  test_loopback.py  test_metrics.py  test_metrics_aggregator.py  test_model_benchmarks.py  test_multi_engine.py  test_performance_cli.py  test_performance_plotting.py  test_performance_regression_ci.py  test_performance_utils.py  test_reporters.py  test_traffic.py  test_upload_idempotency.py  test_workloads.py  test_workloads_extended.py
(+1957 files in other folders)
