[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isagellm-demo"
version = "0.1.0"
description = "Demo Runner & E2E Testing for sageLLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Private"}
authors = [
    {name = "IntelliStream Team", email = "intellistream@example.com"}
]
keywords = ["llm", "inference", "demo", "testing", "domestic-hardware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "isagellm-protocol>=0.1.0",
    "isagellm-backend>=0.1.0",
    "isagellm-core>=0.1.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
full = [
    "isagellm-kv-cache>=0.1.0",
    "isagellm-comm>=0.1.0",
    "isagellm-compression>=0.1.0",
]

[project.scripts]
sagellm-demo = "sagellm_demo.cli:main"

[project.urls]
Homepage = "https://github.com/intellistream/sagellm-demo"
Repository = "https://github.com/intellistream/sagellm-demo"
Issues = "https://github.com/intellistream/sagellm-demo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "year1: Year 1 demo tests",
    "year2: Year 2 demo tests",
    "year3: Year 3 demo tests",
]
