[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isagellm-benchmark"
dynamic = ["version"]
description = "Benchmark Suite & E2E Testing for sageLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Private" }
authors = [{ name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }]
keywords = ["llm", "inference", "benchmark", "testing", "domestic-hardware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core sagellm dependencies
    "isagellm-protocol>=0.5.1.0,<0.6.0",
    "isagellm-core>=0.5.1.0,<0.6.0",     # Engine creation and execution
    "isagellm-backend>=0.5.1.0,<0.6.0",  # Backend providers (CPU/CUDA/etc)
    # CLI dependencies
    "click>=8.0.0",
    "rich>=13.0.0",
    # Dataset loading
    "datasets>=2.14.0", # HuggingFace datasets for ShareGPT
    # Data validation (optional, for schema validation)
    "jsonschema>=4.0.0",
    # Standard API client for OpenAI-compatible benchmarking
    "openai>=1.0.0",
    # Hugging Face dataset upload
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    # Heavy optional backends for benchmarking
    "vllm>=0.2.0",
    "lmdeploy>=0.2.0",
    "httpx>=0.24.0",
    "isage-pypi-publisher>=0.2.0",
]

[project.scripts]
sagellm-benchmark = "sagellm_benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/intellistream/sagellm-benchmark"
Repository = "https://github.com/intellistream/sagellm-benchmark"
Issues = "https://github.com/intellistream/sagellm-benchmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sagellm_benchmark._version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "year1: Year 1 demo tests",
    "year2: Year 2 demo tests",
    "year3: Year 3 demo tests",
]
